// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abbr 1`] = `
"HELO to you



Can I INJECT something in \\\\textbackslash{}LaTeX ?



*[HELO]: In SMTP, the client initiates the dialog with a HELO command identifying itself



*[INJECT]: discard\\\\}\\\\textbackslash{}LaTeX\\\\textbackslash{}abbr\\\\{INJECTED\\\\}\\\\{discard

"
`;

exports[`abbr 2`] = `
"\\\\abbr{FOO}{bar}

"
`;

exports[`abbr with custom config 1`] = `
"->FOO<-

"
`;

exports[`blockquote 1`] = `
"\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}"
`;

exports[`blockquote 2`] = `
"\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a quote
\\\\end{Quotation}



\\\\horizontalLine



\\\\begin{Quotation}
a
multiline
quote
\\\\end{Quotation}"
`;

exports[`blockquote with custom config 1`] = `
"\\\\begin{Foo}
a quote
\\\\end{Foo}



\\\\begin{Foo}
a
multiline
quote
\\\\end{Foo}



\\\\horizontalLine



\\\\begin{Foo}
a quote
\\\\end{Foo}



\\\\horizontalLine



\\\\begin{Foo}
a
multiline
quote
\\\\end{Foo}"
`;

exports[`code 1`] = `
"\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}



\\\\begin{CodeBlock}{text}
a code without lang
\\\\end{CodeBlock}"
`;

exports[`code+caption 1`] = `
"\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{With Source}"
`;

exports[`comments blocks 1`] = `
"Foo<--COMMENTS I am a comment COMMENTS-->bar

"
`;

exports[`custom-blocks 1`] = `
"\\\\begin{Information}
info
\\\\end{Information}


\\\\begin{Warning}
warning
\\\\end{Warning}


\\\\begin{FooBar}
secret
\\\\end{FooBar}


\\\\begin{FooBar}
imbricated spoilers

and another

and that's it
\\\\end{FooBar}


\\\\begin{FooBar}
imbricated spoilers

second level

second level too
\\\\end{FooBar}


\\\\begin{FooBar}
imbricated spoilers

second level

with text in between

second level too
\\\\end{FooBar}


\\\\begin{FooBar}
imbricated spoilers

\\\\begin{CodeBlock}{markdown}
and here is some code
\\\\end{CodeBlock}

second level
\\\\end{FooBar}


\\\\begin{FooBar}
do not over-flattenize

expected to be flattened

first level

\\\\begin{Question}
this remains a question
\\\\end{Question}
\\\\end{FooBar}


\\\\begin{FooBar}
flattenize children of children

\\\\begin{Question}
this remains a question

but the content in it is flattened to the question
\\\\end{Question}
\\\\end{FooBar}


\\\\begin{Question}
question \\\\texttt{coded}
\\\\end{Question}


\\\\begin{Error}
\\\\textbf{error}
foo bar \\\\\\\\
baz
\\\\end{Error}


\\\\begin{Error}[{{a bad error}}]
\\\\textbf{error}
foo bar \\\\\\\\
baz
\\\\end{Error}


\\\\begin{Neutre}[{{\\\\textbf{title}}}]
foo
\\\\end{Neutre}"
`;

exports[`emoticon 1`] = `
"foo :p bar \\\\smiley{/path/to/smile.png}



\\\\smiley{/path/to/wink.png}"
`;

exports[`figure+caption 1`] = `
"\\\\begin{Quotation}[With Source]
a
multiline
quote
\\\\end{Quotation}



\\\\begin{longtblr}{colspec={X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
Nom & Age \\\\\\\\
Fred & 39 \\\\\\\\
Sam & 38 \\\\\\\\
Alice & 35 \\\\\\\\
Mathilde & 35 \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
Nom & Age \\\\\\\\
Fred & 39 \\\\\\\\
Sam & 38 \\\\\\\\
Alice & 35 \\\\\\\\
Mathilde & 35 \\\\\\\\
\\\\end{longtblr}
\\\\captionof{table}{Coucou}"
`;

exports[`footnotes 1`] = `
"\\\\part{International Radiotelephony Spelling Alphabet\\\\textsuperscript{\\\\protect\\\\footnotemark[wiki]}}


Here's the NATO phonetic alphabet\\\\textsuperscript{\\\\footnotemark[wiki]}: Alfa, Bravo, Charlie, Delta, Echo, Foxtrot, Golf, Hotel, India, Juliet, Kilo, Lima, Mike, November, Oscar, Papa, Quebec, Romeo, Sierra, Tango, Uniform, Victor\\\\textsuperscript{\\\\footnotemark[name]}\\\\textsuperscript{\\\\footnotemark[consecutive]}, Whiskey, X-ray, Yankee, and Zulu.



And here's some more text.



\\\\footnotetext[wiki]{Read more about it here.}

\\\\footnotetext[wiki]{And here.}

\\\\footnotetext[wiki2]{Here's another good article on the subject.}

\\\\footnotetext[name]{A great first name.}

\\\\footnotetext[consecutive]{I know.}

The NATO phonetic alphabet\\\\textsuperscript{\\\\footnotemark[wi\\\\-ki]}.



\\\\footnotetext[wi\\\\-ki]{Read more about it somewhere else.}

This example checks that \\\\footnote[l17c26o614]{the generated} IDs do not overwrite the user's IDs\\\\textsuperscript{\\\\footnotemark[1]}.



\\\\footnotetext[1]{Old behavior would, for \\"generated\\", generate a footnote with an ID set to \\\\texttt{1}, thus overwriting this footnote.}

The NATO phonetic alphabet\\\\textsuperscript{\\\\footnotemark[wiki3]}.



\\\\footnotetext[wiki3]{Read more about it somewhere else.}

This is an example of an inline footnote.\\\\footnote[l25c42o918]{This is the \\\\textit{actual} footnote.}



This one isn't even [defined].



\\\\textsuperscript{\\\\footnotemark[both]}[invalid], \\\\footnote[l29c19o1015]{this too}[].



\\\\begin{enumerate}
\\\\item\\\\relax \\\\hyperref[bar]{foo}
\\\\item\\\\relax \\\\textsuperscript{\\\\footnotemark[foo]}\\\\hyperref[bar]{bar}
\\\\item\\\\relax [foo]
\\\\item\\\\relax \\\\textsuperscript{\\\\footnotemark[foo]}\\\\textsuperscript{\\\\footnotemark[bar]}
\\\\end{enumerate}


A footnote\\\\textsuperscript{\\\\footnotemark[2]}.



\\\\footnotetext[2]{Including \\\\footnote[l38c17o1125]{another \\\\textbf{footnote}}}

A footnote\\\\textsuperscript{\\\\footnotemark[tostring]} and \\\\textsuperscript{\\\\footnotemark[__proto__]} and \\\\textsuperscript{\\\\footnotemark[constructor]}.



\\\\footnotetext[tostring]{See \\\\texttt{Object.prototype.toString()}.}

\\\\footnotetext[constructor]{See \\\\texttt{Object.prototype.valueOf()}.}

\\\\footnotetext[__proto__]{See \\\\texttt{Object.prototype.\\\\_\\\\_proto\\\\_\\\\_()}.}

foo\\\\textsuperscript{\\\\footnotemark[abc]} bar. foo\\\\textsuperscript{\\\\footnotemark[xyz]} bar



\\\\footnotetext[abc]{Baz baz}

\\\\footnotetext[xyz]{Baz}

Lorem ipsum dolor sit amet\\\\textsuperscript{\\\\footnotemark[3]}.



Nulla finibus\\\\textsuperscript{\\\\footnotemark[4]} neque et diam rhoncus convallis.



\\\\footnotetext[3]{Consectetur \\\\textbf{adipiscing} elit. Praesent dictum purus ullamcorper ligula semper pellentesque\\\\textsuperscript{\\\\footnotemark[3]}.

\\\\begin{itemize}
\\\\item\\\\relax Containing a list.
\\\\end{itemize}}

\\\\footnotetext[4]{Nam dictum sapien nec sem ultrices fermentum. Nulla \\\\textbf{facilisi}. In et feugiat massa.}

\\\\footnotetext[5]{Nunc dapibus ipsum ut mi \\\\textit{ultrices}, non euismod velit pretium.}

Here is some text containing a footnote\\\\textsuperscript{\\\\footnotemark[somesamplefootnote]}. You can then continue your thought...



\\\\footnotetext[somesamplefootnote]{Here is the text of the footnote itself.}

Even go to a new \\\\hyperref[paragraph]{paragraph} and the footnotes will go to the bottom of the document\\\\textsuperscript{\\\\footnotemark[documentdetails]}.



\\\\footnotetext[documentdetails]{Depending on the \\\\textbf{final} form of your document, of course. See the documentation and experiment.

This footnote has a second \\\\hyperref[paragraph]{paragraph}.}

\\\\footnote{\\\\label{paragraph}\\\\externalLink{http://example.com}{http://example.com}}

\\\\part{my heading\\\\protect\\\\footnote[l76c13o2284]{ref def}}


or



\\\\part{my heading\\\\textsuperscript{\\\\protect\\\\footnotemark[ref]}}


\\\\footnotetext[ref]{def}

First\\\\footnote[l84c6o2338]{the generated} and then a manual numbered def\\\\textsuperscript{\\\\footnotemark[def]}.



\\\\footnotetext[def]{hello}

\\\\begin{itemize}
\\\\item\\\\relax one\\\\footnote[l89c6o2415]{the first}
\\\\item\\\\relax two\\\\textsuperscript{\\\\footnotemark[2nd]}
\\\\item\\\\relax three\\\\textsuperscript{\\\\footnotemark[3rd]}
\\\\item\\\\relax four\\\\footnote[l92c7o2460]{the last}
\\\\end{itemize}


\\\\footnotetext[2nd]{second}

\\\\footnotetext[3rd]{third}

This nested footnote would not work:



\\\\hyperref[baz]{\\\\textsuperscript{\\\\footnotemark[foo2]}}



\\\\footnote{\\\\label{bar}\\\\externalLink{https://bar.com}{https://bar.com}}

\\\\footnote{\\\\label{baz}\\\\externalLink{https://baz.com}{https://baz.com}}

\\\\footnotetext[foo2]{A footnote.}

\\\\chapter{New list continuation}


\\\\begin{enumerate}
\\\\item\\\\relax \\\\textsuperscript{\\\\footnotemark[foo]}
\\\\end{enumerate}


\\\\footnotetext[foo]{bar baz.}

\\\\part{mytitle A\\\\textsuperscript{\\\\protect\\\\footnotemark[footnoteref]}}


\\\\footnotetext[footnoteref]{reference in title}

\\\\part{mytitle B\\\\protect\\\\footnote[l117c12o2768]{footnoterawhead inner}}


\\\\part{myti\\\\textit{tle C\\\\protect\\\\footnote[l119c13o2806]{foo inner}}}


a paragraph\\\\footnote[l121c12o2832]{footnoteRawPar inner}



\\\\inlineImage{undefined}(an image)
Figure: with an \\\\footnote[l124c17o2894]{inline footnote} in caption

"
`;

exports[`gridTable 1`] = `
"\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
Sub & Headings & ABBR \\\\\\\\
\\\\SetCell[r=2]{l} cell \\\\endgraf spans \\\\endgraf rows & \\\\SetCell[c=2]{l} ABBR   spanning &  \\\\\\\\
 & normal & cell \\\\\\\\
multi \\\\endgraf line \\\\endgraf \\\\endgraf cells \\\\endgraf too & \\\\SetCell[c=2]{l} cells can be \\\\endgraf \\\\textit{formatted} \\\\endgraf \\\\textbf{paragraphs} &  \\\\\\\\
\\\\end{longtblr}
\\\\captionof{table}{The new table ABBR [\\\\textasciicircum{}foot] with ||CTRL|| + ||S||}



*[ABBR]: abbreviation



[\\\\textasciicircum{}foot]: a foot



\\\\begin{longtblr}{colspec={X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
title & image \\\\\\\\
space & \\\\inlineImage{https://i.ytimg.com/vi/lt0WQ8JzLz4/maxresdefault.jpg} \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
title & code \\\\\\\\
inline & \\\\texttt{inline} br \\\\endgraf \\\\texttt{inline} \\\\\\\\
block & \\\\hyperref[appendix-1]{Code appendice 1} \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
A & B & C \\\\\\\\
\\\\SetCell[r=2]{l} D & \\\\SetCell[c=2]{l} E &  \\\\\\\\
 & F & G \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
A & B & C & D \\\\\\\\
\\\\SetCell[r=2]{l} D & \\\\SetCell[c=2]{l} E &  &  \\\\\\\\
 & F & \\\\SetCell[c=2]{l} G &  \\\\\\\\
a & b & \\\\SetCell[r=2]{l} c   d \\\\endgraf \\\\endgraf g &  \\\\\\\\
e & f &  &  \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1]},rowhead=2,row{1,2}={font=\\\\bfseries}}
\\\\SetCell[c=2]{l} Table Headings &  & Here \\\\\\\\
Sub & Headings & Too \\\\\\\\
\\\\SetCell[r=2]{l} cell \\\\endgraf spans \\\\endgraf rows & \\\\SetCell[c=2]{l} column[\\\\textasciicircum{}foot] &  \\\\\\\\
 & normal & cell \\\\\\\\
multi \\\\endgraf line \\\\endgraf \\\\endgraf cells \\\\endgraf too & \\\\SetCell[c=2]{l} cells can be \\\\endgraf \\\\textit{formatted} \\\\endgraf \\\\textbf{paragraphs} &  \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
A & B & C \\\\\\\\
\\\\SetCell[r=2]{l} D & \\\\SetCell[c=2]{l} E &  \\\\\\\\
 & F & G \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1]}}
\\\\SetCell[r=3]{l} A & \\\\SetCell[c=2]{l} B &  \\\\\\\\
 & C & D \\\\\\\\
 & \\\\SetCell[c=2]{l} E &  \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1]}}
A & B & C & D \\\\\\\\
\\\\SetCell[c=2]{l} E &  & \\\\SetCell[c=2]{l} F &  \\\\\\\\
\\\\SetCell[c=4]{l} G &  &  &  \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1]}}
\\\\SetCell[c=4]{l} A &  &  &  \\\\\\\\
\\\\SetCell[c=2]{l} B &  & \\\\SetCell[c=2]{l} C &  \\\\\\\\
D & E & F & G \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1]}}
H & \\\\SetCell[c=16]{l}  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  & He \\\\\\\\
Li & Be & \\\\SetCell[r=2]{l}  &  &  &  &  &  &  &  &  &  & B & C & N & O & F & Ne \\\\\\\\
Na & Mg &  &  &  &  &  &  &  &  &  &  & Al & Si & P & S & Cl & Ar \\\\\\\\
K & Ca & Sc & Ti & V & Cr & Mn & Fe & Co & Ni & Cu & Zn & Ga & Ge & As & Se & Br & Kr \\\\\\\\
Rb & Sr & Y & Zr & Nb & Mo & Tc & Ru & Rh & Pd & Ag & Cd & In & Sn & Sb & Te & I & Xe \\\\\\\\
Cs & Ba & LAN & Hf & Ta & W & Re & Os & Ir & Pt & Au & Hg & Tl & Pb & Bi & Po & At & Rn \\\\\\\\
Fr & Ra & ACT & \\\\SetCell[c=15]{l}  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\\\\\\\
\\\\SetCell[c=18]{l}  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\\\\\\\
\\\\SetCell[c=3]{l} Lanthanide &  &  & La & Ce & Pr & Nd & Pm & Sm & Eu & Gd & Tb & Dy & Ho & Er & Tm & Yb & Lu \\\\\\\\
\\\\SetCell[c=3]{l} Actinide &  &  & Ac & Th & Pa & U & Np & Pu & Am & Cm & Bk & Cf & Es & Fm & Md & No & Lw \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1]}}
A \\\\\\\\
\\\\end{longtblr}


Text at the end



\\\\begin{longtblr}{colspec={X[-1]}}
A \\\\\\\\
\\\\end{longtblr}


Text at the



\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1] X[-1]}}
a & \\\\SetCell[r=2]{l}  &  &  \\\\\\\\
b &  &  & c \\\\\\\\
\\\\end{longtblr}
\\\\captionof{table}{multirow}



\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
\\\\SetCell[c=2]{l} span &  & header & \\\\SetCell[c=2]{l} span &  \\\\\\\\
elem & \\\\SetCell[c=2]{l} span middle &  & \\\\SetCell[c=2]{l}  &  \\\\\\\\
\\\\end{longtblr}


\\\\begin{appendices}
\\\\part{\\\\label{appendix-1}Annexes 1}

\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\end{appendices}"
`;

exports[`heading 1`] = `
"\\\\part{first level title}


\\\\chapter{second level title}


\\\\section{third level title}


\\\\subsection{fourth level title}


\\\\subsubsection{fifth level title}


\\\\paragraph{sixth level title}


\\\\part{a \\\\textbackslash{} b}


\\\\part{a \\\\} b}


\\\\part{a \\\\} \\\\textbackslash{} b}


\\\\part{a \\\\} b}


\\\\part{\\\\includegraphics{https://www.johnfdoherty.com/wp-content/uploads/2011/07/Titles1.jpg}}


\\\\part{a title with \\\\includegraphics{https://www.johnfdoherty.com/wp-content/uploads/2011/07/Titles1.jpg} and text}
"
`;

exports[`heading with custom config 1`] = `
"\\\\LevelOneTitle{first level title}


\\\\LevelTwoTitle{second level title}


\\\\LevelThreeTitle{third level title}


\\\\LevelFourTitle{fourth level title}


\\\\LevelFiveTitle{fifth level title}


\\\\LevelSixTitle{sixth level title}


\\\\LevelOneTitle{a \\\\textbackslash{} b}


\\\\LevelOneTitle{a \\\\} b}


\\\\LevelOneTitle{a \\\\} \\\\textbackslash{} b}


\\\\LevelOneTitle{a \\\\} b}


\\\\LevelOneTitle{\\\\inlineImage{https://www.johnfdoherty.com/wp-content/uploads/2011/07/Titles1.jpg}}


\\\\LevelOneTitle{a title with \\\\inlineImage{https://www.johnfdoherty.com/wp-content/uploads/2011/07/Titles1.jpg} and text}
"
`;

exports[`html nodes 1`] = `
"\\\\part{foo}


\\\\textbf{something <a> else}

"
`;

exports[`inline-code 1`] = `
"a paragraph \\\\texttt{with inline code}.



\\\\texttt{a multiline inlinecode}



\\\\texttt{a code with \\\\textbackslash{}}



\\\\texttt{a \\\\textbackslash{}text in \\\\textbackslash{}LaTeX \\\\textbackslash{}\\\\textbackslash{}}"
`;

exports[`link 1`] = `
"\\\\externalLink{an external link}{https://wikipedia.com}



\\\\externalLink{an internal link}{/forums}



\\\\externalLink{an \\\\texttt{external} link}{https://wikipedia.com}"
`;

exports[`link with special characters 1`] = `"\\\\externalLink{foo}{http://example.com?a=b\\\\%c\\\\textasciicircum{}\\\\{\\\\}\\\\#foo}"`;

exports[`link-prepend 1`] = `
"\\\\externalLink{an external link}{https://wikipedia.com}



\\\\externalLink{an internal link}{http://zestedesavoir.com/forums}



\\\\externalLink{an \\\\texttt{external} link}{https://wikipedia.com}"
`;

exports[`list 1`] = `
"\\\\begin{itemize}
\\\\item\\\\relax an
\\\\item\\\\relax \\\\textbf{unordered}
\\\\item\\\\relax list
\\\\end{itemize}


\\\\begin{enumerate}
\\\\item\\\\relax an
\\\\item\\\\relax \\\\texttt{ordered}
\\\\item\\\\relax list
\\\\end{enumerate}"
`;

exports[`math 1`] = `
"A sentence ($S$) with \\\\textit{italic} and inline math ($C_L$) and $b$ another.



\\\\[ L = \\\\frac{1}{2} \\\\rho v^2 S C_L \\\\]



hehe



We also want escaping like so: $$ or like so:



$\\\\frac{1}{2}$

"
`;

exports[`math-extra-command 1`] = `
"\\\\[ \\\\nabla^2 E(\\\\vec x) + [n(\\\\vec{x})\\\\,k]^2\\\\,E(\\\\vec x) = -s(\\\\vec x), \\\\]

"
`;

exports[`math-left-right 1`] = `
"\\\\[ \\\\boxed{\\\\nabla^2 E(\\\\vec x) + \\\\left\\\\{[n(\\\\vec{x})\\\\,k]^2-i\\\\,k\\\\,\\\\sigma(\\\\vec x)\\\\right\\\\}\\\\,E(\\\\vec x)} \\\\]

"
`;

exports[`mix-1 1`] = `
"(for convenience,   are replaced with simple single spaces in the tests)



\\\\part{first 1}


foo \\\\\\\\
bar



Disrupt \\\\sout{asymmetrical} unicorn, pok pok kale chips umami selfies gastropub food truck flannel. Blue \\\\textbf{bottle craft} beer hexagon artisan. Chia gochujang crucifix, \\\\textsuperscript{ready} \\\\textsuperscript{made} hammock \\\\textit{blog succulents} sriracha raw denim scenester cray typewriter fashion axe \\\\textsubscript{art} \\\\textit{party}. Schlitz tacos tilde intelligentsia, unicorn fixie adaptogen beard 8-bit street \\\\textsubscript{art} typewriter.



\\\\chapter{\\\\textit{second} 1}


\\\\textbf{Literally selfies tbh lo-fi. Actually health goth ennui, brooklyn retro polaroid sriracha. Kogi live-edge mixtape marfa street \\\\textsubscript{art} synth. Godard synth truffaut selfies, vape fanny \\\\sout{pack} subway tile. Stumptown af pabst, try-hard fam ethical actually four dollar toast. Microdosing kogi brooklyn, locavore jianbing etsy sartorial \\\\textit{YOLO}. Williamsburg salvia photo booth \\\\textsuperscript{readymade} listicle man braid.}



\\\\horizontalLine



\\\\begin{Quotation}[Guru]
Marfa pickled helvetica put a bird on it hot chicken williamsburg.
Edison bulb asymmetrical \\\\texttt{keffiyeh} schlitz iceland put a bird on it hoodie affogato.

Tofu tote bag distillery viral knausgaard, health goth asymmetrical.
\\\\end{Quotation}



Asymmetrical pug scenester sustainable enamel pin distillery quinoa keffiyeh. Flannel humblebrag PBR\\\\&B polaroid banh mi wolf. Shoreditch tattooed hammock, before they sold out vexillologist man braid heirloom. Activated charcoal craft beer cloud bread meh biodiesel pabst.



\\\\section{\\\\sout{third} 1}


Art party keytar godard iceland neutra cronut. Austin \\\\textsuperscript{readymade} semiotics, edison bulb cloud bread adaptogen blue bottle jean shorts DIY. Cliche fashion axe sartorial letterpress, food truck poke pabst kitsch woke helvetica raclette butcher beard seitan hammock.



\\\\texttt{foo bar}



\\\\begin{Quotation}
\\\\texttt{fo\\\\textbackslash{}o bar}
\\\\end{Quotation}



Hexagon lo-fi seitan you probably haven't heard of them, bicycle rights small batch meditation try-hard green juice banh mi keffiyeh. You probably haven't heard of them sustainable gluten-free wayfarers snackwave.



\\\\section{third 2}


\\\\subsection{\\\\sout{fo}u\\\\textbf{r}t\\\\textit{h} \\\\textit{1}}


Mumblecore kombucha offal, health goth next level before they sold out gluten-free chicharrones keffiyeh. Mumblecore kickstarter hoodie fixie keffiyeh. Microdosing lo-fi taiyaki irony pok pok. Banjo brooklyn umami succulents flexitarian. Swag sartorial scenester synth viral.



\\\\subsubsection{fifth 1}


Banjo bespoke subway tile, street \\\\textsubscript{a\\\\textit{r}}\\\\textsuperscript{t} drinking vinegar offal franzen. Pour-over green juice vaporware kale chips. Meggings cronut affogato PBR\\\\&B, \\\\textsubscript{art} party unicorn dreamcatcher schlitz yuccie mixtape 90's thundercats air plant. Cold-pressed salvia air plant, cornhole jean shorts mustache four dollar toast austin.



\\\\section{third 3}


Meditation heirloom chicharrones, sartorial man braid hot chicken sustainable. Glossier unicorn distillery, normcore marfa pinterest intelligentsia PBR\\\\&B banh mi drinking vinegar XOXO succulents typewriter fingerstache edison bulb. Meditation ethical cronut glossier cliche kickstarter.



\\\\subsection{fourth 2}


Venmo bushwick food truck chartreuse fam. Everyday carry gastropub glossier, cold-pressed salvia migas keytar. Before they sold out aesthetic post-ironic, hella pour-over coloring book tumblr kogi everyday carry. Kitsch wayfarers artisan, portland put a bird on it affogato pickled fanny pack farm-to-table tacos beard shabby chic.



\\\\subsection{fourth 3}


Chambray intelligentsia vape listicle. Pok pok snackwave cronut retro hot chicken, trust fund master cleanse keytar forage dreamcatcher. Taiyaki actually deep v, godard small batch irony lumbersexual unicorn cardigan af. Irony lumbersexual salvia, pitchfork fam snackwave man bun. Kitsch jianbing intelligentsia freegan, waistcoat raw denim cloud bread vice cray etsy listicle skateboard jean shorts.



\\\\subsubsection{fifth 2}


Asymmetrical normcore portland, vaporware viral tote bag DIY slow-carb kogi fanny pack. Keffiyeh ennui church-key, irony VHS man bun edison bulb listicle cloud bread try-hard cred lumbersexual lo-fi glossier.



\\\\part{first 2}


\\\\chapter{second 2}


\\\\subsubsection{fifth 3}


Messenger bag locavore swag raclette brunch whatever, portland food truck. PBR\\\\&B cred mlkshk, poke letterpress waistcoat celiac. La croix letterpress forage keffiyeh."
`;

exports[`mix-2 1`] = `
"(for convenience,   are replaced with simple single spaces in the tests)



\\\\part{first 1}


\\\\begin{Quotation}[Quotation Source]
Code inside quote

\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{code source}
\\\\end{Quotation}



\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\captionof{listing}{First \\\\keys{CTRL}+\\\\keys{S}}



Code: Second



\\\\begin{CodeBlock}{python}
print('code without caption')
\\\\end{CodeBlock}"
`;

exports[`mix-3 1`] = `
"\\\\part{right-aligned list}



{\\\\raggedleft
\\\\begin{itemize}
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\end{itemize}
}


\\\\part{centered list}



{\\\\centering \\\\begin{itemize}
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\end{itemize}
}


\\\\part{left list}




\\\\begin{itemize}
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\item\\\\relax item
\\\\end{itemize}"
`;

exports[`mix-4 1`] = `
"\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
Sub & Headings & \\\\abbr{ABBR}{abbreviation} \\\\\\\\
\\\\SetCell[r=2]{l} cell \\\\endgraf spans \\\\endgraf rows & \\\\SetCell[c=2]{l} column spanning &  \\\\\\\\
 & normal & cell \\\\\\\\
multi \\\\endgraf line \\\\endgraf \\\\endgraf cells \\\\endgraf too & \\\\SetCell[c=2]{l} cells can be \\\\endgraf \\\\textit{formatted} \\\\endgraf \\\\textbf{paragraphs} &  \\\\\\\\
\\\\end{longtblr}
\\\\captionof{table}{The new table \\\\abbr{ABBR}{abbreviation} \\\\textsuperscript{\\\\protect\\\\footnotemark[foot]} with \\\\keys{CTRL} + \\\\keys{S}}



\\\\footnotetext[foot]{a foot}

\\\\begin{longtblr}{colspec={X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
title & image \\\\\\\\
space & \\\\inlineImage{https://i.ytimg.com/vi/lt0WQ8JzLz4/maxresdefault.jpg} \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
title & code \\\\\\\\
inline & \\\\texttt{inline} br \\\\endgraf \\\\texttt{inline} \\\\\\\\
block & \\\\hyperref[appendix-1]{Code appendice 1} \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
A & B & C \\\\\\\\
\\\\SetCell[r=2]{l} D & \\\\SetCell[c=2]{l} E &  \\\\\\\\
 & F & G \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
A & B & C & D \\\\\\\\
\\\\SetCell[r=2]{l} D & \\\\SetCell[c=2]{l} E &  &  \\\\\\\\
 & F & \\\\SetCell[c=2]{l} G &  \\\\\\\\
a & b & \\\\SetCell[r=2]{l} c   d \\\\endgraf \\\\endgraf g &  \\\\\\\\
e & f &  &  \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1]},rowhead=2,row{1,2}={font=\\\\bfseries}}
\\\\SetCell[c=2]{l} Table Headings &  & Here \\\\\\\\
Sub & Headings & Too \\\\\\\\
\\\\SetCell[r=2]{l} cell \\\\endgraf spans \\\\endgraf rows & \\\\SetCell[c=2]{l} column spanning &  \\\\\\\\
 & normal & cell \\\\\\\\
multi \\\\endgraf line \\\\endgraf \\\\endgraf cells \\\\endgraf too & \\\\SetCell[c=2]{l} cells can be \\\\endgraf \\\\textit{formatted} \\\\endgraf \\\\textbf{paragraphs} &  \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
A & B & C \\\\\\\\
\\\\SetCell[r=2]{l} D & \\\\SetCell[c=2]{l} E &  \\\\\\\\
 & F & G \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1]}}
\\\\SetCell[r=3]{l} A & \\\\SetCell[c=2]{l} B &  \\\\\\\\
 & C & D \\\\\\\\
 & \\\\SetCell[c=2]{l} E &  \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1]}}
A & B & C & D \\\\\\\\
\\\\SetCell[c=2]{l} E &  & \\\\SetCell[c=2]{l} F &  \\\\\\\\
\\\\SetCell[c=4]{l} G &  &  &  \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1]}}
\\\\SetCell[c=4]{l} A &  &  &  \\\\\\\\
\\\\SetCell[c=2]{l} B &  & \\\\SetCell[c=2]{l} C &  \\\\\\\\
D & E & F & G \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1] X[-1]}}
H & \\\\SetCell[c=16]{l}  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  & He \\\\\\\\
Li & Be & \\\\SetCell[r=2]{l}  &  &  &  &  &  &  &  &  &  & B & C & N & O & F & Ne \\\\\\\\
Na & Mg &  &  &  &  &  &  &  &  &  &  & Al & Si & P & S & Cl & Ar \\\\\\\\
K & Ca & Sc & Ti & V & Cr & Mn & Fe & Co & Ni & Cu & Zn & Ga & Ge & As & Se & Br & Kr \\\\\\\\
Rb & Sr & Y & Zr & Nb & Mo & Tc & Ru & Rh & Pd & Ag & Cd & In & Sn & Sb & Te & I & Xe \\\\\\\\
Cs & Ba & LAN & Hf & Ta & W & Re & Os & Ir & Pt & Au & Hg & Tl & Pb & Bi & Po & At & Rn \\\\\\\\
Fr & Ra & ACT & \\\\SetCell[c=15]{l}  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\\\\\\\
\\\\SetCell[c=18]{l}  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\\\\\\\
\\\\SetCell[c=3]{l} Lanthanide &  &  & La & Ce & Pr & Nd & Pm & Sm & Eu & Gd & Tb & Dy & Ho & Er & Tm & Yb & Lu \\\\\\\\
\\\\SetCell[c=3]{l} Actinide &  &  & Ac & Th & Pa & U & Np & Pu & Am & Cm & Bk & Cf & Es & Fm & Md & No & Lw \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1]}}
A \\\\\\\\
\\\\end{longtblr}


Text at the end



\\\\begin{longtblr}{colspec={X[-1]}}
A \\\\\\\\
\\\\end{longtblr}


Text at the



\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1] X[-1] X[-1]}}
a & \\\\SetCell[r=2]{l}  &  &  \\\\\\\\
b &  &  & c \\\\\\\\
\\\\end{longtblr}
\\\\captionof{table}{multirow}



\\\\begin{appendices}
\\\\part{\\\\label{appendix-1}Annexes 1}

\\\\begin{CodeBlock}{python}
print('bla')
\\\\end{CodeBlock}
\\\\end{appendices}"
`;

exports[`mix-5 1`] = `
"\\\\image{http://www.numerama.com/content/uploads/2016/07/espace.jpg}[espace\\\\textsuperscript{\\\\protect\\\\footnotemark[node]}]


\\\\footnotetext[node]{Two things are infinite: the universe and human stupidity.}"
`;

exports[`mix-6 1`] = `
"\\\\image{http://img.youtube.com/vi/8TQIvdFl4aU/0.jpg}[\\\\externalLink{https://www.youtube.com/embed/8TQIvdFl4aU}{https://www.youtube.com/embed/8TQIvdFl4aU}]


Video: a caption



\\\\image{http://img.youtube.com/vi/8TQIvdFl4aU/0.jpg}[\\\\externalLink{https://www.youtube.com/embed/8TQIvdFl4aU}{https://www.youtube.com/embed/8TQIvdFl4aU}]


no caption"
`;

exports[`mix-7 1`] = `
"\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1]}}
cell & \\\\texttt{code with line break} \\\\\\\\
\\\\SetCell[c=2]{l} \\\\hyperref[appendix-1]{Code appendice 1} &  \\\\\\\\
\\\\end{longtblr}


\\\\begin{appendices}
\\\\part{\\\\label{appendix-1}Annexes 1}

\\\\begin{CodeBlock}{text}
line 1
line2
\\\\end{CodeBlock}
\\\\end{appendices}"
`;

exports[`mix-math-escape 1`] = `
"$\\\\Delta \\\\varphi = 2 \\\\pi f \\\\Delta t_{orange/bleu} = -\\\\frac{\\\\pi}{4}$



\\\\[ \\\\begin{array}{l r}
  & 45 \\\\\\\\
+ & 218 \\\\\\\\
+ & 800 \\\\\\\\
\\\\hline
= & 1063
\\\\end{array} \\\\]



\\\\[ \\\\left( \\\\frac{(4 + 5)\\\\times(2 + 3) + 6}{8 + 7} \\\\right) ^9 \\\\]



$42\\\\%$



This should be escaped: $\\\\pink{	 {I love \\\\LaTeX}   {ls / > outputrce}  {outputrce}}$"
`;

exports[`paragraph 1`] = `
"\\\\part{first 1}


Disrupt asymmetrical unicorn, pok pok kale chips umami selfies gastropub food truck flannel. Blue bottle craft beer hexagon artisan. Chia gochujang crucifix, readymade hammock blog succulents sriracha raw denim scenester cray typewriter fashion axe art party. Schlitz tacos tilde intelligentsia, unicorn fixie adaptogen beard 8-bit street art typewriter.



\\\\chapter{second 1}


Literally selfies tbh lo-fi. Actually health goth ennui, brooklyn retro polaroid sriracha. Kogi live-edge mixtape marfa street art synth. Godard synth truffaut selfies, vape fanny pack subway tile. Stumptown af pabst, try-hard fam ethical actually four dollar toast. Microdosing kogi brooklyn, locavore jianbing etsy sartorial YOLO. Williamsburg salvia photo booth readymade listicle man braid.



Marfa pickled helvetica put a bird on it hot chicken williamsburg. Edison bulb asymmetrical keffiyeh schlitz iceland put a bird on it hoodie affogato. Tofu tote bag distillery viral knausgaard, health goth asymmetrical.



Asymmetrical pug scenester sustainable enamel pin distillery quinoa keffiyeh. Flannel humblebrag PBR\\\\&B polaroid banh mi wolf. Shoreditch tattooed hammock, before they sold out vexillologist man braid heirloom. Activated charcoal craft beer cloud bread meh biodiesel pabst.



\\\\section{third 1}


Art party keytar godard iceland neutra cronut. Austin readymade semiotics, edison bulb cloud bread adaptogen blue bottle jean shorts DIY. Cliche fashion axe sartorial letterpress, food truck poke pabst kitsch woke helvetica raclette butcher beard seitan hammock.



Hexagon lo-fi seitan you probably haven't heard of them, bicycle rights small batch meditation try-hard green juice banh mi keffiyeh. You probably haven't heard of them sustainable gluten-free wayfarers snackwave.



\\\\section{third 2}


\\\\subsection{fourth 1}


Mumblecore kombucha offal, health goth next level before they sold out gluten-free chicharrones keffiyeh. Mumblecore kickstarter hoodie fixie keffiyeh. Microdosing lo-fi taiyaki irony pok pok. Banjo brooklyn umami succulents flexitarian. Swag sartorial scenester synth viral.



\\\\subsubsection{fifth 1}


Banjo bespoke subway tile, street art drinking vinegar offal franzen. Pour-over green juice vaporware kale chips. Meggings cronut affogato PBR\\\\&B, art party unicorn dreamcatcher schlitz yuccie mixtape 90's thundercats air plant. Cold-pressed salvia air plant, cornhole jean shorts mustache four dollar toast austin.



\\\\section{third 3}


Meditation heirloom chicharrones, sartorial man braid hot chicken sustainable. Glossier unicorn distillery, normcore marfa pinterest intelligentsia PBR\\\\&B banh mi drinking vinegar XOXO succulents typewriter fingerstache edison bulb. Meditation ethical cronut glossier cliche kickstarter.



\\\\subsection{fourth 2}


Venmo bushwick food truck chartreuse fam. Everyday carry gastropub glossier, cold-pressed salvia migas keytar. Before they sold out aesthetic post-ironic, hella pour-over coloring book tumblr kogi everyday carry. Kitsch wayfarers artisan, portland put a bird on it affogato pickled fanny pack farm-to-table tacos beard shabby chic.



\\\\subsection{fourth 3}


Chambray intelligentsia vape listicle. Pok pok snackwave cronut retro hot chicken, trust fund master cleanse keytar forage dreamcatcher. Taiyaki actually deep v, godard small batch irony lumbersexual unicorn cardigan af. Irony lumbersexual salvia, pitchfork fam snackwave man bun. Kitsch jianbing intelligentsia freegan, waistcoat raw denim cloud bread vice cray etsy listicle skateboard jean shorts.



\\\\subsubsection{fifth 2}


Asymmetrical normcore portland, vaporware viral tote bag DIY slow-carb kogi fanny pack. Keffiyeh ennui church-key, irony VHS man bun edison bulb listicle cloud bread try-hard cred lumbersexual lo-fi glossier.



\\\\part{first 2}


\\\\chapter{second 2}


\\\\subsubsection{fifth 3}


Messenger bag locavore swag raclette brunch whatever, portland food truck. PBR\\\\&B cred mlkshk, poke letterpress waistcoat celiac. La croix letterpress forage keffiyeh."
`;

exports[`ping 1`] = `
"Hello \\\\ping{you} and \\\\ping{you_too}, and \\\\ping{also you}

"
`;

exports[`regression: code block without language 1`] = `
"\\\\begin{CodeBlock}{text}
a
\\\\end{CodeBlock}

"
`;

exports[`table 1`] = `
"\\\\begin{longtblr}{colspec={X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
1 & 2 \\\\\\\\
1 & 2 \\\\\\\\
1 & 2 \\\\\\\\
1 & 2 \\\\\\\\
\\\\end{longtblr}


\\\\begin{longtblr}{colspec={X[-1] X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
1 & 2 & 3 \\\\\\\\
1 & 2 \\\\\\\\
1 & 2  & 3 \\\\\\\\
1 & 2  & 3 \\\\\\\\
\\\\end{longtblr}


Another test for inline image with overridden configuration:



\\\\begin{longtblr}{colspec={X[-1] X[-1]},rowhead=1,row{1}={font=\\\\bfseries}}
c1 & c2 \\\\\\\\
c3 & \\\\inlineImage{https://zestedesavoir.com/media/galleries/426/56dc4a1e-416b-4a9d-830d-95b45d58a17a.png} \\\\\\\\
\\\\end{longtblr}"
`;
